--- a/DataCleaning.ipynb
+++ b/DataCleaning.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 105,
    "id": "c29dd2a7-3c66-4c5b-9f24-dcd603bb49d3",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
        "4      19000          26000  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 87,
    "id": "ff449753-2cd4-4fc4-8b85-c0b3b4759980",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
        "4      19000          26000  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 90,
    "id": "1422186a-c822-48c7-a174-b535933903ae",
    "metadata": {},
    "outputs": [
@@ -822,7 +822,7 @@
        "Name: height, dtype: float64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 91,
    "id": "eafa5a9a-de5b-44fd-bf7a-4cf61cc98d29",
    "metadata": {},
    "outputs": [
@@ -930,7 +930,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Adi Dako</td>\n",
-       "      <td>lisbon</td>\n",
+       "      <td>LISBON</td>\n",
        "      <td>PORTUGAL</td>\n",
        "      <td>142</td>\n",
        "      <td>132.0</td>\n",
@@ -941,7 +941,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>John Paul</td>\n",
-       "      <td>london</td>\n",
+       "      <td>LONDON</td>\n",
        "      <td>UNITED KINGDOM</td>\n",
        "      <td>157</td>\n",
        "      <td>165.0</td>\n",
@@ -952,7 +952,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Cindy Jules</td>\n",
-       "      <td>stockholm</td>\n",
+       "      <td>Stockholm</td>\n",
        "      <td>Sweden</td>\n",
        "      <td>121</td>\n",
        "      <td>117.0</td>\n",
@@ -963,7 +963,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Arthur Kegels</td>\n",
-       "      <td>brussels</td>\n",
+       "      <td>BRUSSELS</td>\n",
        "      <td>BELGIUM</td>\n",
        "      <td>149</td>\n",
        "      <td>121.0</td>\n",
@@ -974,7 +974,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Freya Bismark</td>\n",
-       "      <td>berlin</td>\n",
+       "      <td>Berlin</td>\n",
        "      <td>GERMANYY</td>\n",
        "      <td>134</td>\n",
        "      <td>126.0</td>\n",
@@ -985,7 +985,7 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Rena Filip</td>\n",
-       "      <td>brasilia</td>\n",
+       "      <td>Brasilia</td>\n",
        "      <td>BRAZIL</td>\n",
        "      <td>127</td>\n",
        "      <td>167.0</td>\n",
@@ -996,7 +996,7 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Cindy Jules</td>\n",
-       "      <td>stockholm</td>\n",
+       "      <td>Stockholm</td>\n",
        "      <td>Sweden</td>\n",
        "      <td>121</td>\n",
        "      <td>117.0</td>\n",
@@ -1007,7 +1007,7 @@
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>John Paul</td>\n",
-       "      <td>london</td>\n",
+       "      <td>LONDON</td>\n",
        "      <td>UNITED KINGDOM</td>\n",
        "      <td>157</td>\n",
        "      <td>NaN</td>\n",
@@ -1021,14 +1021,14 @@
       ],
       "text/plain": [
        "                name               city         country  height  weight  \\\n",
-       "0          Adi Dako          lisbon       PORTUGAL          142   132.0   \n",
-       "1          John Paul          london     UNITED KINGDOM     157   165.0   \n",
-       "2        Cindy Jules          stockholm          Sweden     121   117.0   \n",
-       "3      Arthur Kegels           brussels         BELGIUM     149   121.0   \n",
-       "4      Freya Bismark             berlin        GERMANYY     134   126.0   \n",
-       "5         Rena Filip       brasilia              BRAZIL     127   167.0   \n",
-       "6        Cindy Jules          stockholm          Sweden     121   117.0   \n",
-       "7          John Paul          london     UNITED KINGDOM     157     NaN   \n",
+       "0          Adi Dako          LISBON       PORTUGAL          142   132.0   \n",
+       "1          John Paul          LONDON     UNITED KINGDOM     157   165.0   \n",
+       "2        Cindy Jules          Stockholm          Sweden     121   117.0   \n",
+       "3      Arthur Kegels           BRUSSELS         BELGIUM     149   121.0   \n",
+       "4      Freya Bismark             Berlin        GERMANYY     134   126.0   \n",
+       "5         Rena Filip       Brasilia              BRAZIL     127   167.0   \n",
+       "6        Cindy Jules          Stockholm          Sweden     121   117.0   \n",
+       "7          John Paul          LONDON     UNITED KINGDOM     157     NaN   \n",
        "\n",
        "   account_a  account_b  total_account  \n",
        "0     2390.0       4340           6730  \n",
@@ -1041,7 +1041,7 @@
        "7     4500.0       2300           6800  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1198,6 +1198,252 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "04e200f4-d4c7-4529-ac05-793c1a6e3c06",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0f7fbb9-e838-45db-9ed6-f0ecd77e2045",
+   "metadata": {},
+   "source": [
+    "SYNTAX ERRORS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "cbf383d6-f597-4af1-ba5f-427299dc321f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>city</th>\n",
+       "      <th>country</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>account_a</th>\n",
+       "      <th>account_b</th>\n",
+       "      <th>total_account</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Adi Dako</td>\n",
+       "      <td>LISBON</td>\n",
+       "      <td>PORTUGAL</td>\n",
+       "      <td>142</td>\n",
+       "      <td>132.0</td>\n",
+       "      <td>2390.0</td>\n",
+       "      <td>4340</td>\n",
+       "      <td>6730</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>John Paul</td>\n",
+       "      <td>LONDON</td>\n",
+       "      <td>UNITED KINGDOM</td>\n",
+       "      <td>157</td>\n",
+       "      <td>165.0</td>\n",
+       "      <td>4500.0</td>\n",
+       "      <td>34334</td>\n",
+       "      <td>38834</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Cindy Jules</td>\n",
+       "      <td>Stockholm</td>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>121</td>\n",
+       "      <td>117.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5504</td>\n",
+       "      <td>8949</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Arthur Kegels</td>\n",
+       "      <td>BRUSSELS</td>\n",
+       "      <td>BELGIUM</td>\n",
+       "      <td>149</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>4344.0</td>\n",
+       "      <td>8999</td>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Freya Bismark</td>\n",
+       "      <td>Berlin</td>\n",
+       "      <td>GERMANY</td>\n",
+       "      <td>134</td>\n",
+       "      <td>126.0</td>\n",
+       "      <td>7000.0</td>\n",
+       "      <td>19000</td>\n",
+       "      <td>26000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Rena Filip</td>\n",
+       "      <td>Brasilia</td>\n",
+       "      <td>BRAZIL</td>\n",
+       "      <td>127</td>\n",
+       "      <td>167.0</td>\n",
+       "      <td>4999.0</td>\n",
+       "      <td>3999</td>\n",
+       "      <td>3450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Cindy Jules</td>\n",
+       "      <td>Stockholm</td>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>121</td>\n",
+       "      <td>117.0</td>\n",
+       "      <td>3445.0</td>\n",
+       "      <td>5504</td>\n",
+       "      <td>8949</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>John Paul</td>\n",
+       "      <td>LONDON</td>\n",
+       "      <td>UNITED KINGDOM</td>\n",
+       "      <td>157</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4500.0</td>\n",
+       "      <td>2300</td>\n",
+       "      <td>6800</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                name               city         country  height  weight  \\\n",
+       "0          Adi Dako          LISBON       PORTUGAL          142   132.0   \n",
+       "1          John Paul          LONDON     UNITED KINGDOM     157   165.0   \n",
+       "2        Cindy Jules          Stockholm          Sweden     121   117.0   \n",
+       "3      Arthur Kegels           BRUSSELS         BELGIUM     149   121.0   \n",
+       "4      Freya Bismark             Berlin         GERMANY     134   126.0   \n",
+       "5         Rena Filip       Brasilia              BRAZIL     127   167.0   \n",
+       "6        Cindy Jules          Stockholm          Sweden     121   117.0   \n",
+       "7          John Paul          LONDON     UNITED KINGDOM     157     NaN   \n",
+       "\n",
+       "   account_a  account_b  total_account  \n",
+       "0     2390.0       4340           6730  \n",
+       "1     4500.0      34334          38834  \n",
+       "2        NaN       5504           8949  \n",
+       "3     4344.0       8999            300  \n",
+       "4     7000.0      19000          26000  \n",
+       "5     4999.0       3999           3450  \n",
+       "6     3445.0       5504           8949  \n",
+       "7     4500.0       2300           6800  "
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Task 1\n",
+    "# ---\n",
+    "# While performing our analysis, we can get to a point where we need to\n",
+    "# fix spelling mistakes or typos. \n",
+    "# ---\n",
+    "# Dataset url = http://bit.ly/DataCleaningDataset\n",
+    "# ---\n",
+    "# OUR CODE GOES BELOW\n",
+    "#\n",
+    "df['country']\n",
+    "df.loc[df['country']==\"GERMANYY\",'country']=\"GERMANY\"\n",
+    "df\n",
+    "# Let's replacing any value \"GERMANYY\" with the correct value \"GERMANY\".\n",
+    "# We use the string replace() function to perform our operation as shown.\n",
+    "# ---\n",
+    "#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "2520356a-766d-4984-ba19-95c6b3d5c58e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0          PORTUGAL\n",
+       "1    UNITED KINGDOM\n",
+       "2            Sweden\n",
+       "3           BELGIUM\n",
+       "4          GERMANYY\n",
+       "5            BRAZIL\n",
+       "6            Sweden\n",
+       "7    UNITED KINGDOM\n",
+       "Name: country, dtype: object"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "# Task 2\n",
+    "# ---\n",
+    "# We can also decide to strip or remove leading spaces (space infront)\n",
+    "# and trailing spaces (spaces at the end) in our datset by using the\n",
+    "# string strip() function covered in this example.\n",
+    "# ---\n",
+    "# Dataset = http://bit.ly/DataCleaningDataset\n",
+    "# ---\n",
+    "# OUR CODE GOES BELOW\n",
+    "#\n",
+    "\n",
+    "df.country\n",
+    "df['country'].apply(str.strip)\n",
+    "# We first load our dataframe column with the intention to observe leading\n",
+    "# and trailing spaces in the city column\n",
+    "# ---\n",
+    "#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc552d10-5cc0-425b-ad71-8b0c4fd124eb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11feedd8-5f91-4813-9bd8-8ffb4f9f390b",
    "metadata": {},
    "outputs": [],
    "source": []
